mobile overflow-x fixed

--- a/css/base.css
+++ b/css/base.css
@@ -19,5 +19,10 @@ body {
     color: #303841;
     font-family: 'incostaregular' ,monospace;
     background-color: #F3F3F3;
+}
+.app {
+    width: 100%;
+    height: 100%;
+    position: relative;
     overflow-x: hidden;
 }
